fixed all issues with multiple commands